# ai-tools-rs

./: README.md
example-cmd/: Cargo.toml  README.md
example-cmd/src/: main.rs
explain-cmd/: Cargo.toml  README.md
explain-cmd/src/: main.rs
